--- a/spotify-song-recs/package.json
+++ b/spotify-song-recs/package.json
@@ -8,8 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +39,9 @@
   "devDependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "npm-run-all": "^4.1.5"
+    "http-proxy-middleware": "^2.0.0",
+    "npm-run-all": "^4.1.5",
+    "request": "^2.88.2"
   }
+
 }
